Fixes wrap bug with long links

--- a/portal-web/trunk/src/main/webapp/less/style.less
+++ b/portal-web/trunk/src/main/webapp/less/style.less
@@ -1859,7 +1859,19 @@ body.register footer {
     text-decoration: none;
   }
 
-  p a { text-decoration: none; }
+  p { 
+    a { text-decoration: none; }
+
+    -ms-word-break: break-all;
+    word-break: break-all;
+
+    // Non standard for webkit
+    word-break: break-word;
+
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+  }
 
   .taxonomic_class {
     clear: both;
